# agent-template

./: .gitignore  AUTH-LEDGER.md  CHECKPOINT.md  CONSTITUTION.md  GLUON-REQUIREMENTS-SPEC.md  GLUON.md  LICENSE  META.md  PREAMBLE.md  PRESENTER-NOTES.md  README.md  TASKS-LOG.md  TASKS.md  demo.py  demo.sh  generate-pdfs.sh  manager-arch-vision-a3.md  manager-arch-vision-a3.pptx  manager-arch-vision-b6.md  manager-arch-vision-b6.pptx  manager-arch-vision-draft.md  manager-arch-vision-dt100-plan.md  manager-arch-vision-local.md  manager-arch-vision-whiteboards.md  package-lock.json  package.json  pyproject.toml  slides.html  study-guide.html
archive/: README.md
archive/zsh/: MANIFEST.md  README.md  restore-linux.sh
archive/zsh/macos/: .p10k.zsh  .zprofile  .zshenv  .zshrc  zsh_history
assets/: dt100-whiteboards.md  guru-terms-sot.md
assets/diagrams/a3/: README.md  _classes.mmd  mermaid-config.json  slide00-cover.mmd  slide01-scope.mmd  slide02-validated.mmd  slide03-outcomes.mmd  slide04-sponsor.mmd
assets/diagrams/a3/legacy-mermaid/: README.md  slide02-validated.mmd  slide03-outcomes.mmd  slide04-sponsor.mmd
assets/diagrams/b6/: README.md  b6-slide01-ccc-framework.mmd  b6-slide01-process-ribbon.mmd  b6-slide02-validation-stack.mmd  b6-slide04-csb-inset.mmd  b6-slide04-qos-stitch.mmd  b6-slide05-gate-alignment.mmd  b6-slide06-boundaries.mmd  b6-slide07-next-steps.mmd  mermaid-config.json
assets/templates/: COMPANY-COLORS.md  README.md  TEMPLATE-VALIDATION.md  template-spec.md  upscale-ccc-style-reference.pptx  upscale-company-template.pptx  upscale-exec-empty.pptx
docs/: AUTH-LEDGER-EXEC-REPORT.md  AUTH-LEDGER-PLAN.md  TEST-LAYERS.md
dt100/: README.md  bugatti-qos-architecture-speaker-notes.md  bugatti-qos-architecture.md  bugatti-qos-architecture.pptx  bugatti-qos-ccc-presenter-notes.md  bugatti-qos-ccc-reference.md  bugatti-qos-ccc.md  bugatti-qos-ccc.pptx  ccc-strategy.md  manager-arch-vision-a3-speaker-notes.md  manager-arch-vision-a3.md  manager-arch-vision-a3.pptx  manager-arch-vision-b6-presenter-notes.md  manager-arch-vision-b6-reference.md  manager-arch-vision-b6.md  manager-arch-vision-b6.pptx  plan.md  qos-architecture-diwakar-tundlam-speaker-notes.md  qos-architecture-diwakar-tundlam.md  qos-architecture-diwakar-tundlam.pptx  qos-architecture-speaker-notes.md  qos-architecture.md  qos-architecture.pptx
dt122/: README.md  bugatti-csb-buffer-carving.pptx  bugatti-qos-ccc-meta.md  bugatti-qos-ccc-presenter-notes.md  bugatti-qos-ccc-reference.md  bugatti-qos-ccc.md  bugatti-qos-ccc.pptx  ccc-strategy.md  friday-launch.md  w-review-brief.md
scratch/: README.md  archive-manager-arch-vision-draft.md
scripts/: DECK-ACCEPTANCE.md  PPTX-PIPELINE.md  a3_aligned_render.py  a3_from_md.py  bootstrap-gluon-zombie.sh  bootstrap-vm.sh  build-company-template.py  build-dt100-decks.py  check-decks.sh  check_decks.py  deck_from_md.py  deck_render.py  deck_validate.py  dump_deck_on_slide.py  extract-empty-template.py  fix-template-colors.py  pptx_compare.py  pptx_preview.py  pptx_util.py  preview-a3-deck.sh  pymupdf_util.py  render-a3-diagrams.py  render_a3_diagrams.py  render_b6_diagrams.py  run-deck-build.sh  test-py.sh  validate-all-pptx.py  validate-company-template.py  workflow_testkit.py  zombie-hatch-audit.sh  zombie-pull-build.sh
src/gluon_cli/: __init__.py
src/py/: fib.py  hello.py
tests/: WORKFLOW-REGRESSION.md  conftest.py  layer_registry.py  layers.yaml  test_deck_pptx_regression.py  test_fib.py  test_hello.py  test_layers.py  test_pptx_util.py  test_uv_commands.py  test_workflow_pipeline.py
tests/auth_ledger/: ledger.py  ssh_harness.py  test_ledger_file.py  test_remote_hosts.py
tests/fixtures/: auth-ledger-ssh.yaml  published-deck-hashes.txt  workflow-canary.md
tests/fixtures/diagrams/canary/: canary-slide01-boxes.mmd  canary-slide02-flow.mmd  mermaid-config.json
