[project]
name = "diwakar-work"
version = "0.1.0"
description = "Gluon workspace — DT100 decks and tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "pymupdf>=1.24",
    "python-pptx>=1.0",
]

[project.scripts]
build-decks = "gluon_cli:build_decks"
build-decks-a3 = "gluon_cli:build_decks_a3"
check-decks = "gluon_cli:check_decks"
pytest-breadth = "gluon_cli:pytest_breadth"
pytest-p1-verify = "gluon_cli:pytest_p1_verify"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gluon_cli"]

[project.optional-dependencies]
render = [
    "cairosvg>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src/py", "tests"]
testpaths = ["tests"]
addopts = "-m 'not artifact_parity'"
markers = [
    "workflow: full md→mermaid→png→pptx path (requires npx)",
    "artifact_parity: production md/png/pptx sync gate (opt-in; excluded from default pytest)",
    "auth_ledger: AUTH-LEDGER SSH smoke + ntp-date skew tests (requires network + keys)",
    "breadth: basic acceptance — 5 tests, one per category; run: uv run pytest -m breadth",
    "p1_verify: P1 lock-down pair (2 tests) — fill_content_slide tuple fix gate",
]
filterwarnings = [
    "error",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
